@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2014, 2023, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2014, 2024, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -21,26 +21,30 @@
  * questions.
  */
 
+import jdk.test.lib.process.OutputAnalyzer;
+import jdk.test.lib.process.ProcessTools;
+
 import java.io.File;
 import java.io.FileOutputStream;
-import jdk.internal.org.objectweb.asm.ClassWriter;
-import jdk.internal.org.objectweb.asm.MethodVisitor;
-import static jdk.internal.org.objectweb.asm.Opcodes.*;
-import jdk.test.lib.process.ProcessTools;
-import jdk.test.lib.process.OutputAnalyzer;
+import java.lang.classfile.ClassFile;
+import java.lang.constant.ClassDesc;
+import java.lang.constant.MethodTypeDesc;
+
+import static java.lang.classfile.ClassFile.*;
+import static java.lang.constant.ConstantDescs.*;
 
 /*
  * @test TestMultiANewArray
+ * @enablePreview
  * @bug 8038076
  * @library /test/lib
- * @modules java.base/jdk.internal.org.objectweb.asm
- *          java.base/jdk.internal.misc
+ * @modules java.base/jdk.internal.misc
  *          java.management
  * @compile -XDignore.symbol.file TestMultiANewArray.java
- * @run driver TestMultiANewArray 49
- * @run driver TestMultiANewArray 50
- * @run driver TestMultiANewArray 51
- * @run driver TestMultiANewArray 52
+ * @run main/othervm --enable-preview TestMultiANewArray 49
+ * @run main/othervm --enable-preview TestMultiANewArray 50
+ * @run main/othervm --enable-preview TestMultiANewArray 51
+ * @run main/othervm --enable-preview TestMultiANewArray 52
  */
 
 public class TestMultiANewArray {
@@ -48,39 +52,37 @@ public class TestMultiANewArray {
         int cfv = Integer.parseInt(args[0]);
         writeClassFile(cfv);
         System.err.println("Running with cfv: " + cfv);
-        ProcessBuilder pb = ProcessTools.createTestJavaProcessBuilder("-cp", ".",  "ClassFile");
+        ProcessBuilder pb = ProcessTools.createTestJavaProcessBuilder("-cp", ".", "ClassFile");
         OutputAnalyzer output = new OutputAnalyzer(pb.start());
         output.shouldContain("VerifyError");
         output.shouldHaveExitValue(1);
     }
 
     public static void writeClassFile(int cfv) throws Exception {
-        ClassWriter cw = new ClassWriter(0);
-        MethodVisitor mv;
+        byte[] bytes;
 
-        cw.visit(cfv, ACC_PUBLIC + ACC_SUPER, "ClassFile", null, "java/lang/Object", null);
-        mv = cw.visitMethod(ACC_PUBLIC, "<init>", "()V", null, null);
-        mv.visitCode();
-        mv.visitVarInsn(ALOAD, 0);
-        mv.visitMethodInsn(INVOKESPECIAL, "java/lang/Object", "<init>", "()V", false);
-        mv.visitInsn(RETURN);
-        mv.visitMaxs(1, 1);
-        mv.visitEnd();
-
-        mv = cw.visitMethod(ACC_PUBLIC + ACC_STATIC, "main", "([Ljava/lang/String;)V", null, null);
-        mv.visitCode();
-        mv.visitInsn(ICONST_1);
-        mv.visitInsn(ICONST_2);
-        mv.visitMultiANewArrayInsn("[I", 2);
-        mv.visitVarInsn(ASTORE, 1);
-        mv.visitInsn(RETURN);
-        mv.visitMaxs(2, 2);
-        mv.visitEnd();
-
-        cw.visitEnd();
+        bytes = ClassFile.of().build(ClassDesc.of("ClassFile"),
+                clb -> clb
+                        .withVersion(cfv, 0)
+                        .withSuperclass(CD_Object)
+                        .withFlags(ACC_PUBLIC | ACC_SUPER)
+                        .withMethodBody(INIT_NAME, MTD_void, ACC_PUBLIC,
+                                cob -> cob
+                                        .aload(0)
+                                        .invokespecial(CD_Object, INIT_NAME, MTD_void)
+                                        .return_())
+                        .withMethodBody("main", MethodTypeDesc.of(CD_void, CD_String.arrayType()), ACC_PUBLIC | ACC_STATIC,
+                                cob -> cob
+                                        .iconst_1()
+                                        .iconst_2()
+                                        .multianewarray(CD_int.arrayType(), 2)
+                                        .astore(1)
+                                        .return_()
+                        )
+        );
 
         try (FileOutputStream fos = new FileOutputStream(new File("ClassFile.class"))) {
-             fos.write(cw.toByteArray());
+            fos.write(bytes);
         }
     }
 }
